--- a/Results.tex
+++ b/Results.tex
@@ -12,6 +12,8 @@
 
 To quantify RecB binding time to DNA in live \textit{E. coli}, we used a Halo-tag fusion to the RecB subunit, conjugated to the JF549 fluorescent dye (Figure \ref{Fig:exp_principle}A). The fusion was previously used and characterised, ensuring specific one-to-one labelling of RecB molecules without adverse effects on the DNA repair process\cite{Lepore2019a,Lepore2023}. Due to the large size and topological constraints of the bacterial chromosome, DNA-bound RecB diffuses very slowly\cite{Lepore2023}. We therefore applied the previously developed technique of localisation enhancement\cite{Yu2006, Elf2007}: since RecB is present at low copy numbers in \textit{E. coli} ($\sim$5 molecules per cell on average\cite{Lepore2019a}), imaging live cells with a long exposure time (1 second) made fast-diffusing RecB molecules appear as weak homogeneous signal in the cell, while immobile or slow-diffusing RecB molecules formed intense diffraction-limited spots (referred to throughout this article as RecB spots, Figures \ref{Fig:exp_principle}A and \ref{Fig:exp_principle}B). The complete absence of similar spots in cells expressing the free Halo-tag from a plasmid confirmed that these spots were specific to RecB (Supp. Figure \ref{SIFig:freehalo_image}). However, their exact nature needed to be confirmed. Although DNA-bound molecules are expected to diffuse very slowly, the RecBCD-Halo complex diffuses in the crowded and constrained environment of the cytoplasm, and might undergo transient interactions with DNA\cite{Lepore2023}, which could lead to RecB spots forming independently of DNA binding. To gain more insight into the nature of RecB spots, we increased the number of induced DSBs by adding ciprofloxacin to agar pads before imaging, and measured the lifetime of the spots by recording 100-second timelapse videos with 2 sec interval between frames on different positions in the sample, for a total time of 60 min following exposure to ciprofloxacin (Figure \ref{Fig:exp_principle}C). The 1 second exposure time was optimal to detect RecB spots with good signal-to-noise, while limiting dye photobleaching and keeping a sufficient time resolution to determine spot lifetimes. Visual inspection of the timelapse data showed that RecB spot lifetime was hetereogenous, with a majority of spots being visible only for a few frames, and a small number persisting for longer times. These longer-lived spots became more frequent as the ciprofloxacin concentration was increased. Inspecting background-subtracted intensity time-traces for single RecB spots showed that spots lost their intensity in a single step (Supp. Figure \ref{SIFig:SM_traces}), consistent with single-molecules photobleaching or transitioning from a very slowly diffusing state to a rapid one.
 
+\subsection*{RecB dissociation is not affected by ciprofloxacin}
+
 % RecB spot lifetime
 Using the timelapse data, we built histograms of RecB spot lifetimes at the different ciprofloxacin concentrations (Figure \ref{Fig:lifetimes}A). In the absence of ciprofloxacin, a large majority of spots lasted less than 10 seconds. Under increasing ciprofloxacin concentrations, the distribution showed a clear shift towards longer-lived spots, with the histogram at 20 and 30 ng/ml ciprofloxacin displaying a clear "tail" of long-lived events ($>$ 10 sec). Fitting these histograms with a mono-exponential decay model ($y = a.e^{-k.t}$) did not match the experimental data accurately (Supp. Figure \ref{SIFig:monoexp_fits}). In particular, it did not account for the tail of longer-lived spots that formed at high ciprofloxacin concentrations. Fitting with a bi-exponential decay model ($y = a_1.e^{-k_1.t} + a_2.e^{-k_2.t}$) accounted better for the longer-lived RecB spots (Figure \ref{Fig:lifetimes}A). The bi-exponential fit outlined two populations of spots with different lifetimes: a short-lived one, with average lifetimes ranging from 1.4 to 1.7 sec, and a longer-lived one, with average lifetimes ranging from 10 to 14 sec (Table \ref{tab:fit_results}). Even though the short-lived spots always represented a majority of events (over 90\% of the spots), the proportion of long-lived spots tended to increase under higher ciprofloxacin exposure (from 1.4\% $\pm$ 0.3 under 3 ng/ml ciprofloxacin to 5.5\% $\pm$ 1.4 under 30 ng/ml ciprofloxacin).
 
@@ -59,7 +61,7 @@ Using the timelapse data, we built histograms of RecB spot lifetimes at the diff
 % Gam
 To determine whether short- or long-lived spots resulted from RecB binding to DNA leading to SOS induction, we measured RecB spot lifetime in the presence and absence of ciprofloxacin while over-expressing the Gam protein of phage $\lambda$ from a plasmid. The Gam protein was previously shown to bind in place of DNA on the RecBCD complex\cite{Wilkinson2016}, and its overexpression is expected to abolish RecBCD binding to DSBs. Accordingly, cells that over-expressed Gam and were exposed to high ciprofloxacin (30 ng/ml) showed little elongation compared to cells that did not overexpress Gam (Supp. Figure \ref{SIFig:Gam_cell_length}), indicating that most cells did not induce the SOS response, due to the inability of the RecBCD-Gam complex to bind to DSBs and load RecA. The resulting RecB spot lifetimes showed a similar distribution to the one obtained in the absence of ciprofloxacin (Supp. Figure \ref{SIFig:Gam_RecB_lifetimes_fits}). This was confirmed by fitting the histogram with our bi-exponential decay model, which found a proportion of long-lived spots in the presence of 30 ng/ml ciprofloxacin (1.8\% $\pm$ 0.9, Table \ref{tab:fit_results}) equivalent to wild-type cells that were not exposed to ciprofloxacin (1.8\% $\pm$ 1). The residual amount of long-lived RecB spots in the presence of Gam could be due to residual DNA binding despite the presence of Gam. This residual binding could also be the cause for the small increase in cell length observed in Gam-expressing cells under 30 ng/ml ciprofloxacin (Supp. Figure \ref{SIFig:Gam_cell_length}). Since Gam overexpression prevents RecB binding to DNA ends, and specifically caused long-lived spots to disappear, we can conclude that long-lived spots correspond to RecB molecules that have bound to a DSB. Given that under Gam overexpression, 95\% of RecB spots were shorter than 10 sec (Figure \ref{Fig:lifetimes}C), we considered any spot with a lifetime over 10 sec to be a DNA-bound RecB molecule. The appearance of short-lived spots in the presence of Gam is likely due to a combination of short-lived DNA binding and slow, confined diffusion of the RecBCD-Gam-Halo complex (Supp. Note \ref{note:spurious_spots} and Supp. Figure \ref{SIFig:displacement_simul}). Therefore, spots that are visible for less than 10 seconds cannot be reliably assigned as either DNA-bound or not. However, the largely reduced cell elongation in the presence of Gam (Supp. Figure \ref{SIFig:Gam_cell_length}) indicates that short-lived spots do not trigger the SOS response.
 
-Using the Gam protein allowed us to identify DNA-bound RecB molecules as the longer-lived population in our bi-exponential fits of the RecB spot lifetime histograms. We determined that when it processes a DSB, RecB stays bound to DNA for 10 to 15 seconds on average, regardless of the ciprofloxacin concentration. To test whether the duration of ciprofloxacin exposure had an effect on spot lifetimes, we performed separate fits at 15 min intervals (Supp. Figure \ref{SIFig:RecB_lifetimes_timepoints}). The RecB spot lifetimes obtained were consistent with those reported in Table \ref{tab:fit_results} (10-15 sec for long-lived spots, and 1.5-2 sec for short-lived spots), indicating that RecB binding was not affected by the duration of ciprofloxacin exposure.
+Using the Gam protein allowed us to identify DNA-bound RecB molecules as the longer-lived population in our bi-exponential fits of the RecB spot lifetime histograms. We determined that when it processes a DSB, RecB stays bound to DNA for 10 to 15 seconds on average, regardless of the ciprofloxacin concentration. In addition, to test whether the duration of ciprofloxacin exposure had an effect on spot lifetimes, we performed separate fits at 15 min intervals (Supp. Figure \ref{SIFig:RecB_lifetimes_timepoints}). The RecB spot lifetimes obtained were consistent with those reported in Table \ref{tab:fit_results} (10-15 sec for long-lived spots, and 1.5-2 sec for short-lived spots), indicating that RecB binding was not affected by the duration of ciprofloxacin exposure.
 
 % Effect of ciprofloxacin exposure on the different mutants
 Imaging RecB binding to DSBs in the presence of different concentrations of ciprofloxacin allowed us to determine that the amount of DNA damage experienced by the cells did not influence the time spent by RecB on DNA (Table \ref{tab:fit_results}). This is consistent with processing of DSBs by RecBCD taking place independently of the presence of other DSBs in the cell. Next, we wanted to test whether RecB dissociation from DNA was influenced by the following step in the repair process, the loading of RecA on DNA. Therefore, we imaged the \dreca\ and \geneteneighty\ mutants in the presence and absence of 30 ng/ml ciprofloxacin. Figure \ref{Fig:lifetimes}D shows defocussed brightfield images of wild-type and mutant cells that were not exposed to ciprofloxacin, or exposed to 30 ng/ml ciprofloxacin for 60 min. Supp. Figure \ref{SIFig:mutants_cell_lengths} shows the average cell lengths for the different strains and ciprofloxacin exposure durations. As previously observed, wild-type cells show a clear response to exposure to 30 ng/ml ciprofloxacin, where the cell length increases significantly due to induction of the SOS response. In contrast to this, since the \dreca\ mutant is unable to form a RecA filament, it is also unable to induce the SOS response. Cell length therefore remains unchanged, even upon prolonged exposure to 30 ng/ml ciprofloxacin. In the absence of ciprofloxacin, the \geneteneighty\ mutant cells were slightly more elongated than wild-type cells. This matches previous indications that this mutant has a higher baseline of SOS induction than wild-type cells in the absence of exogenous DNA damage\cite{Lepore2023}. Upon exposure to ciprofloxacin, the cell length of the \geneteneighty\ mutant increased, albeit slightly less on average than the wild-type's (Supp. Figure \ref{SIFig:mutants_cell_lengths}). This might be a reflection of \teneighty's inability to directly load RecA on the DNA, and the use of the alternative RecFOR pathway leading to different time dynamics of the SOS response\cite{Ivancic-Bace_2003,Lepore2023}.
@@ -93,6 +95,8 @@ As for the wild-type strain, we imaged RecB, computed histograms of RecB spot li
 \end{table*}
 
 % Part 2: Rate of recruitment of RecB on the DNA
+\subsection*{RecB binding can be used to estimate the rate of DSB formation}
+
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=.4\textwidth]{Figures/Fig3_RecB_recruitment.pdf}
@@ -124,7 +128,7 @@ In the \geneteneighty\ mutant, RecB recruitment is higher than in WT cells, but 
 RecA loading on DNA triggers the SOS response, which inhibits cell division, leading to cell filamentation. Previous studies have reported that the SOS response also triggers compaction of the bacterial nucleoid\cite{Odsbu2014}. To see if this was the case for breaks induced by ciprofloxacin in our experimental conditions, we stained DNA using the Sytox Green dye. The use of a green dye allowed us to concomitantly image RecB, and to correlate the position of DNA-bound RecB molecules with that of the nucleoid. Figure \ref{Fig:nucleoid}A shows representative images of the nucleoid and DNA-bound RecB after 60 minutes of exposure to different concentrations of ciprofloxacin. In untreated cells, the nucleoid was often observed to be bi-lobed, consistently with previous observations\cite{Lepore2023}. After exposure to ciprofloxacin, the cells appeared elongated, and the nucleoid was often compacted in the centre of the cell. Due to nucleoid compaction, the total fraction of the cell occupied by the nucleoid decreased, from 40\% on average in untreated cells to 31\% in cells exposed to 30 ng/ml of ciprofloxacin for an hour (Supp. Figure \ref{SIFig:nucleoid_compaction}). This compaction was accompanied by a centring of the nucleoid along the cell's long axis. Supp. Figure \ref{SIFig:nucleoid_position} shows that upon increasing exposure to ciprofloxacin (in time and concentration), cells elongated, and nucleoids were increasingly centred.
 
 % Correlation of nucleoid and RecB spots
-As expected, DNA-bound RecB were found in close proximity to the nucleoid (Figure \ref{Fig:nucleoid}A). Figure \ref{Fig:nucleoid}B shows the strong overlap between the spatial distribution of DNA-bound RecB spots and the nucleoid density in the cell (Supp. Figure \ref{SIFig:recb_nucleoid_timepoints} shows the same data after different durations of ciprofloxacin exposure). Due to nucleoid compaction and centring, both the nucleoid density and the position of DNA-bound RecB remained within $\sim$2 µm either side of the cell centre, despite the cells having elongated significantly.
+As expected, DNA-bound RecB were found in close proximity to the nucleoid (Figure \ref{Fig:nucleoid}A). Figure \ref{Fig:nucleoid}B shows the strong overlap between the spatial distribution of DNA-bound RecB spots and the nucleoid density in the cell (Supp. Figure \ref{SIFig:recb_nucleoid_timepoints} shows the same data after different durations of ciprofloxacin exposure). Due to nucleoid compaction and centring, both the nucleoid density and the position of DNA-bound RecB remained within $\sim$2 µm either side of the cell centre, despite the cells having elongated significantly. This confirms that during DSB repair, the cell's DNA content is being physically constrained in a limited space at the centre of the cell, in which subsequent DSB formation and RecB recruitment will occur.
 
 % Compaction of the nucleoid in mutants
 The differences in induction of the SOS response between the wild-type cells and the \dreca\ and \geneteneighty\ mutants resulted in different states of compaction for the bacterial nucleoid (Figure \ref{Fig:nucleoid}C, Supp. Figure \ref{SIFig:mutants_nucleoid_compaction}). Whereas in the wild-type, exposure to ciprofloxacin triggered compaction and centring of the nucleoid, the inability of the \dreca\ mutant to induce the SOS response resulted in two separate nucleoid regions at the cell poles. Despite the absence of SOS induction, the nucleoid occupied a smaller fraction of the cell in the \dreca\ mutant after exposure to ciprofloxacin (Supp. Figure \ref{SIFig:mutants_nucleoid_compaction}). This can be attributed to the progressive degradation of the bacterial chromosome by the repeated cycles of RecBCD binding (Figure \ref{Fig:recruitment}B). In the \geneteneighty\ mutant, the nucleoid appeared more disorganised than in wild-type cells (Figure \ref{Fig:nucleoid}C), but still underwent compaction at the centre of the cell upon exposure to ciprofloxacin (Supp. Figure \ref{SIFig:mutants_nucleoid_compaction}). Notably, the level of compaction of the nucleoid was slightly less important than in wild-type cells (38\% $\pm$ 9 of the cell occupied by the nucleoid after 75 min of exposure to ciprofloxacin, against 32\% $\pm$ 11 in the wild-type). This might be a reflection of the less efficient RecA loading in this mutant, leading to different time dynamics of the SOS induction and nucleoid compaction.
@@ -136,21 +140,4 @@ In both mutant strains, the localisation of DNA-bound RecB overlapped with the b
 \subsection*{Ciprofloxacin exposure induces formation of RecA filaments and nucleoid compaction}
 
 %% RecA imaging
-During processing of DSBs, RecBCD facilitates the loading of the RecA protein on single-stranded DNA. To broaden our view of the repair process downstream of RecBCD, we imaged a tandem fusion of RecA with the fluorescent protein SYFP2\cite{Wiktor2021}. Based on the fluorescence distribution in the cells (Supp. Figure \ref{SIFig:reca_structures}A), we identified three states of RecA: diffuse, forming a bright focus, or forming an elongated filament, which matches previous \emph{in-vivo} observations of RecA\cite{Wiktor2021}. Because of the large diversity of shapes observed, especially for RecA filaments, the detection of RecA structures by rule-based algorithms was challenging. Therefore, we designed and trained a deep-learning algorithm capable of classifying individual cells based on the three types of spatial distributions cited above (Supp. Figures \ref{SIFig:object_class} and \ref{SIFig:reca_structures}B). In cells that were not exposed to ciprofloxacin, the RecA-associated fluorescence was mostly diffuse, and occasionally formed a bright focus. This is consistent with cells undergoing occasional endogenous DNA damage. The proportion of cells that contained RecA filaments was low in the absence of ciprofloxacin ($\sim$10\%). After one hour of exposure, the proportion of cells that contained a RecA filament had increased to $\sim$40\% at 20 ng/ml ciprofloxacin, and $\sim$60\% at 30 ng/ml. RecA foci on the other hand formed quickly following ciprofloxacin exposure (present in $\sim$40\% of the cells after 15 min of exposure to 30 ng/ml ciprofloxacin) and came back to endogenous damage level after $\sim$1 hour. Taken together, these results show that RecA foci are transient structures in the repair process that do not accumulate under high DNA damage, whereas RecA filaments accumulate under constant exposure to ciprofloxacin.
-
-
-
-% \begin{figure*}[htbp]
-%     \centering
-%     \includegraphics[width=.75\textwidth]{Figures/Fig4_mutants.pdf}
-%     \caption{RecB binding to DNA in the \dreca\ and \geneteneighty\ mutant strains in the absence and presence of ciprofloxacin (30 ng/ml). \textbf{(A)} Representative brightfield images of wild-type (WT), \dreca\ and \geneteneighty\ mutants cells, in the presence and absence of ciprofloxacin (30 ng/ml). \textbf{(B)} Fitted lifetimes of RecB molecules on DNA. Black dots show individual datasets, and bars the median values. \ncells{56,131}. \nspots{177,646}. \textbf{(C)} Rate of recruitment of RecB to the DNA. Black dots show individual datasets, and bars the median values. \ncells{56,131}. \nspots{177,646}. \textbf{(D)} Representative overlay images of RecB-associated fluorescence (magenta) and the bacterial nucleoid (green). Segmented cell outline shown in grey. \textbf{(E)} Overlay of nucleoid density (green area) and position of DNA-bound RecB molecules (magenta bars) along the cell's long axis. \ncells{15,029}. \nspots{58,331}. \nnucl{20,831}.}
-%     \label{Fig:mutants}
-% \end{figure*}
-
-
-% \begin{figure*}[htbp]
-%     \centering
-%     \includegraphics[width=.8\textwidth]{Figures/Fig3_cell_response.pdf}
-%     \caption{Bacterial cell response to the induction of DSBs by ciprofloxacin. \textbf{(A)} Representative images of cells containing different RecA structures (diffuse fluorescence, foci or filaments) after 60 minutes of exposure to ciprofloxacin. Arrows point to representative examples of each of these structures. \textbf{(B)} Proportion of cells containing RecA foci or filaments. Black dots represent individual datasets, and bars the average between them. \ncells{32,031}. \textbf{(C)} Representative images of cells (segmented outline in grey) showing the nucleoid (green) and RecB-associated fluorescence (magenta). RecB spots (indicated by arrows) are located in close proximity to the nucleoid. \textbf{(D)} Overlay of nucleoid density (green area) and position of DNA-bound RecB molecules (magenta bars) along the cell's long axis, for different ciprofloxacin concentrations (0 to 30 ng/ml). \ncells{24,014}. \nspots{79,969}. \nnucl{31,441}.}
-%     \label{Fig:reca_nucleoid}
-% \end{figure*}
+During processing of DSBs, RecBCD facilitates the loading of the RecA protein on single-stranded DNA. To broaden our view of the repair process downstream of RecBCD, we imaged a tandem fusion of RecA with the fluorescent protein SYFP2 which was previously shown to preserve RecA functionality\cite{Wiktor2021}. Based on the fluorescence distribution in the cells (Supp. Figure \ref{SIFig:reca_structures}A), we identified three states of RecA: diffuse, forming a bright focus, or forming an elongated filament, which matches previous \emph{in-vivo} observations of RecA\cite{Wiktor2021}. Because of the large diversity of shapes observed, especially for RecA filaments, the detection of RecA structures by rule-based algorithms was challenging. Therefore, we designed and trained a deep-learning algorithm capable of classifying individual cells based on the three types of spatial distributions cited above (Supp. Figures \ref{SIFig:object_class} and \ref{SIFig:reca_structures}B). In cells that were not exposed to ciprofloxacin, the RecA-associated fluorescence was mostly diffuse, and occasionally formed a bright focus or filament. This is consistent with the expectation that RecA diffuses freely in the cell in the absence of DNA damage, and only polymerises on DNA in the event of an endogenous DSB. After one hour of exposure, the proportion of cells that contained a RecA filament had increased to $\sim$40\% at 20 ng/ml ciprofloxacin, and $\sim$60\% at 30 ng/ml. RecA foci on the other hand formed quickly following ciprofloxacin exposure (present in $\sim$40\% of the cells after 15 min of exposure to 30 ng/ml ciprofloxacin) and came back to endogenous damage level after $\sim$1 hour. Taken together, these results show that RecA foci are transient structures in the repair process that do not accumulate under high DNA damage, whereas RecA filaments accumulate under constant exposure to ciprofloxacin (see Discussion).
